# qoi-control

./: CMakeLists.txt  README.md  build_script.sh
include/: Log.hpp  Synthesizer4GE.hpp  Timer.hpp  ompSZp_typemanager.c  ompSZp_typemanager.h
include/Decomposer/: MGARD.hpp
include/Reconstructor/: ComposedReconstructor.hpp
include/Retriever/: FileRetriever.hpp
parallel_src/: CMakeLists.txt  paraGE_C.cpp  paraGE_C_sz3delta.cpp  paraGE_Mach.cpp  paraGE_Mach_sz3delta.cpp  paraGE_PT.cpp  paraGE_PT_sz3delta.cpp  paraGE_T.cpp  paraGE_T_sz3delta.cpp  paraGE_Vtot.cpp  paraGE_Vtot_sz3delta.cpp  paraGE_mu.cpp  paraGE_mu_sz3delta.cpp  para_VTOT.cpp  para_VTOT_sz3delta.cpp  para_refactor.cpp  para_refactor_d64.cpp  testGE_VTOT.cpp
test/: CMakeLists.txt  halfing_C.cpp  halfing_C_sz3delta.cpp  halfing_Mach.cpp  halfing_Mach_sz3delta.cpp  halfing_PT.cpp  halfing_PT_sz3delta.cpp  halfing_T.cpp  halfing_T_sz3delta.cpp  halfing_Vtot.cpp  halfing_Vtot_sz3delta.cpp  halfing_mu.cpp  halfing_mu_sz3delta.cpp  refactor_data.cpp
